# shanyraq

./: Dockerfile  README.md  pyproject.toml  railway.json  sql_app.db
app/: announcements_repository.py  comment_repository.py  main.py  models.py  users_repository.py
migrations/: env.py
migrations/versions/: 587047b0d225_changed_comment_table.py  6c552039bfa4_added_the_column_type_announcement.py  97d89d5910e4_changed_the_announcement_table_added_.py  9e6ce74983df_changed_comment_table.py  ab6eef00dcc8_added_on_table_announcements_the_column_.py  da96b3b164be_added_on_table_announcements_the_column_.py  e32a9b2a2723_changed_user_table.py
